--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "photographyportfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://paulmartin91.github.io/photographyPortfolio/",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-fade-in": "^0.1.6",
+    "react-scripts": "3.2.0",
+    "react-transition-group": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
