--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "homepage": "https://paulmartin91.github.io/photographyPortfolio/",
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "gh-pages": "^2.1.1",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^16.10.2",
     "react-fade-in": "^0.1.6",
     "react-scripts": "3.2.0",
