--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "bootstrap": "^4.5.3",
     "gh-pages": "^2.1.1",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "react": "^16.10.2",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^16.10.2",
